--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a target="_blank" href="https://www.linkedin.com/in/vikbehal/">
             <img class="me" src="Images/pic.PNG" alt="Vikrant in 2014"/>
         </a>
-    
+    Hi There!
     <p class="social">Find me on <a target="_blank" href="https://www.linkedin.com/in/vikbehal/">LinkedIn</a></p>
 </body>
 
