Signed-off-by: Vikrant03 <Vikrant03@ad.infosys.com>

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
         <a target="_blank" href="https://www.linkedin.com/in/vikbehal/">
-            <img class="me" src="blob/master/Images/pic.PNG" alt="Vikrant in 2014"/>
+            <img class="me" src="https://github.com/vikbehal/vikbehal.github.io/blob/master/Images/pic.PNG" alt="Vikrant in 2014"/>
         </a>
     Hi There!
     <p class="social">Find me on <a target="_blank" href="https://www.linkedin.com/in/vikbehal/">LinkedIn</a></p>
