Signed-off-by: Vikrant03 <Vikrant03@ad.infosys.com>

--- a/index.html
+++ b/index.html
@@ -7,18 +7,34 @@
     body{
         background-color: #c5e3ed;
     }
-    .me{
-        border-radius: 2cm;
-        float: right;
-    }
+	.me{
+	        border-radius: 2cm;
+        	float: right;
+    	}
+	.headline{
+		font-size: 25px;
+		padding: 5px;
+	}
+	.summary{
+		font-size: 15px;
+		padding: 0 5px 5px 5px;
+	}
+	
 </style>
 </head>
 
 <body>
         <a target="_blank" href="https://www.linkedin.com/in/vikbehal/">
-            <img class="me" src="https://github.com/vikbehal/vikbehal.github.io/blob/master/Images/pic.PNG" alt="Vikrant in 2014"/>
+            <img class="me" src="Images/pic.PNG" alt="Vikrant in 2014"/>
         </a>
-    Hi There!
+	<div class="headline">
+		   Technology Lead: Developing in Microsoft & Open Source technologies to enable businesses to do more
+	</div>
+	<div class="summary">
+		I am a Technology Lead with 8 years of experience, and I am looking for new opportunities in the field. I am a dedicated and creative professional. <br/>
+		I designed & developed a variety of applications in Office 365, SharePoint 2013 & .NET for various clients across globe. Additionally, I managed a team of 8 since 2018 until now. Finally, I helped my company build local technical team by hiring & training right talent in 2019-2020. <br/>
+		I am skilled in Computer Programming, Machine learning & Design Thinking.
+	</div>
     <p class="social">Find me on <a target="_blank" href="https://www.linkedin.com/in/vikbehal/">LinkedIn</a></p>
 </body>
 
