Signed-off-by: Vikrant03 <Vikrant03@ad.infosys.com>

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     	}
 	.headline{
 		font-size: 25px;
-		padding: 5px;
+		margin: 5px;
 	}
 	.summary{
 		font-size: 15px;
-		padding: 0 5px 5px 5px;
+		margin: 5px;
+		line-height: 1.3;
 	}
 	
 </style>
