Signed-off-by: Vikrant03 <Vikrant03@ad.infosys.com>

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Building public profile</title>
+<title>Vikrant Behal</title>
 <style>
     body{
         background-color: #c5e3ed;
